fix: reset button when menu is collapsed

--- a/src/components/Menu/ui/Menu.module.css
+++ b/src/components/Menu/ui/Menu.module.css
@@ -3,5 +3,5 @@
 }
 
 .button_reset {
-  margin-left: 10px;
+  margin-left: 20px;
 }
